tests/expectations/compiler/mappings/shadowed_mapping_2_fail.out
Error [EAST0372017]: The name `one` is defined multiple times.
    --> compiler-test:9:13
     |
   2 |       mapping one: field => field;
     |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ previous definition of `one` here
   ...
   9 |           let one: u8 = 1u8;
     |               ^^^ `one` redefined here
